# mini-lucene

./: .bazelrc  .clang-tidy  .gitignore  AGENTS.md  Aristotle.md  BUILD.bazel  BUILD.bazel.debug  CLAUDE_FIXES.md  MODULE.bazel  PROJECT.md  Plato.md  README.md  REFLECTION.md  REMAINING.md  REVIEW.md  SUMMARY.md  Socrates.md  lucene-1.0.1-architecture.md
examples/: delete_files.cpp  index_files.cpp  p1_demo.cpp  phrase_demo.cpp  search_files.cpp
include/minilucene/analysis/: analyzer.h  letter_tokenizer.h  lower_case_filter.h  lower_case_tokenizer.h  porter_stem_filter.h  porter_stemmer.h  simple_analyzer.h  standard_analyzer.h  standard_filter.h  stop_analyzer.h  stop_filter.h  token.h  token_filter.h  token_stream.h  tokenizer.h
include/minilucene/document/: date_field.h  document.h  field.h
include/minilucene/index/: document_writer.h  field_info.h  field_infos.h  fields_reader.h  fields_writer.h  index_reader.h  index_writer.h  segment_infos.h  segment_merge_info.h  segment_merge_queue.h  segment_merger.h  segment_reader.h  segments_reader.h  term.h  term_docs.h  term_enum.h  term_info.h  term_infos_reader.h  term_infos_writer.h  term_positions.h
include/minilucene/query_parser/: query_parser.h
include/minilucene/search/: boolean_clause.h  boolean_query.h  boolean_scorer.h  date_filter.h  filter.h  filtered_term_enum.h  fuzzy_query.h  fuzzy_term_enum.h  hit_collector.h  hit_queue.h  hits.h  index_searcher.h  multi_searcher.h  multi_term_query.h  phrase_query.h  prefix_query.h  query.h  scorer.h  searcher.h  similarity.h  term_query.h  top_docs.h  wildcard_query.h  wildcard_term_enum.h
include/minilucene/store/: directory.h  fs_directory.h  index_input.h  index_output.h  ram_directory.h
include/minilucene/util/: arrays.h  bit_vector.h  priority_queue.h
scripts/: agent_loop.sh  coverage_report.sh  deepseek_prompt.md
src/analysis/: letter_tokenizer.cpp  lower_case_filter.cpp  lower_case_tokenizer.cpp  porter_stem_filter.cpp  porter_stemmer.cpp  simple_analyzer.cpp  standard_analyzer.cpp  standard_filter.cpp  stop_analyzer.cpp  stop_filter.cpp  token.cpp
src/document/: date_field.cpp  document.cpp  field.cpp
src/index/: document_writer.cpp  field_info.cpp  field_infos.cpp  fields_reader.cpp  fields_writer.cpp  index_writer.cpp  segment_infos.cpp  segment_merge_info.cpp  segment_merge_queue.cpp  segment_merger.cpp  segment_reader.cpp  segments_reader.cpp  term_infos_reader.cpp  term_infos_writer.cpp
src/query_parser/: query_parser.cpp
src/search/: boolean_query.cpp  boolean_scorer.cpp  date_filter.cpp  filtered_term_enum.cpp  fuzzy_query.cpp  fuzzy_term_enum.cpp  hits.cpp  index_searcher.cpp  multi_searcher.cpp  multi_term_query.cpp  phrase_query.cpp  prefix_query.cpp  term_query.cpp  wildcard_query.cpp  wildcard_term_enum.cpp
src/store/: fs_directory.cpp  index_input.cpp  index_output.cpp  ram_directory.cpp
src/util/: bit_vector.cpp
tests/data/: corpus_small.txt  doc1.txt  doc2.txt  doc3.txt
tests/data/cranfield/: cran_ground_truth.txt
tests/integration/: benchmark_test.cpp  corpus_test.cpp  cranfield_ground_truth_test.cpp  cranfield_qrels_test.cpp  cranfield_test.cpp  demo_e2e_test.cpp  es_ground_truth_test.cpp  exact_score_test.cpp  forensic_claude_test.cpp  missing_features_test.cpp  persistence_test.cpp  regression_test.cpp  reverse_test.cpp  search_termquery_test.cpp  segment_merge_test.cpp  stress_test.cpp  write_read_roundtrip_test.cpp
tests/unit/analysis/: porter_stemmer_test.cpp  simple_analyzer_test.cpp  stop_filter_test.cpp
tests/unit/document/: document_test.cpp
tests/unit/index/: document_writer_test.cpp
tests/unit/query_parser/: query_parser_test.cpp
tests/unit/search/: advanced_query_test.cpp  boolean_query_test.cpp  phrase_query_test.cpp
tests/unit/store/: fs_directory_test.cpp  ram_directory_test.cpp  vint_test.cpp
tests/unit/util/: bit_vector_test.cpp  priority_queue_test.cpp
tools/: BenchCompare.java  CranfieldGroundTruth.java  GroundTruthGenerator.java
