load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "util",
    srcs = ["src/util/bit_vector.cpp"],
    hdrs = [
        "include/minilucene/util/bit_vector.h",
        "include/minilucene/util/priority_queue.h",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_test(
    name = "bit_vector_test",
    srcs = ["tests/unit/util/bit_vector_test.cpp"],
    deps = [
        ":util",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "priority_queue_test",
    srcs = ["tests/unit/util/priority_queue_test.cpp"],
    deps = [
        ":util",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "store",
    srcs = [
        "src/store/index_output.cpp",
        "src/store/index_input.cpp",
        "src/store/ram_directory.cpp",
        "src/store/fs_directory.cpp",
    ],
    hdrs = [
        "include/minilucene/store/directory.h",
        "include/minilucene/store/index_input.h",
        "include/minilucene/store/index_output.h",
        "include/minilucene/store/ram_directory.h",
        "include/minilucene/store/fs_directory.h",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_test(
    name = "vint_test",
    srcs = ["tests/unit/store/vint_test.cpp"],
    deps = [
        ":store",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "ram_directory_test",
    srcs = ["tests/unit/store/ram_directory_test.cpp"],
    deps = [
        ":store",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "fs_directory_test",
    srcs = ["tests/unit/store/fs_directory_test.cpp"],
    deps = [
        ":store",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "document",
    srcs = [
        "src/document/field.cpp",
        "src/document/document.cpp",
    ],
    hdrs = [
        "include/minilucene/document/field.h",
        "include/minilucene/document/document.h",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "analysis",
    srcs = [
        "src/analysis/token.cpp",
        "src/analysis/letter_tokenizer.cpp",
        "src/analysis/lower_case_filter.cpp",
        "src/analysis/stop_filter.cpp",
        "src/analysis/simple_analyzer.cpp",
        "src/analysis/stop_analyzer.cpp",
    ],
    hdrs = [
        "include/minilucene/analysis/token.h",
        "include/minilucene/analysis/token_stream.h",
        "include/minilucene/analysis/tokenizer.h",
        "include/minilucene/analysis/token_filter.h",
        "include/minilucene/analysis/letter_tokenizer.h",
        "include/minilucene/analysis/lower_case_filter.h",
        "include/minilucene/analysis/stop_filter.h",
        "include/minilucene/analysis/analyzer.h",
        "include/minilucene/analysis/simple_analyzer.h",
        "include/minilucene/analysis/stop_analyzer.h",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_test(
    name = "document_test",
    srcs = ["tests/unit/document/document_test.cpp"],
    deps = [
        ":document",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "simple_analyzer_test",
    srcs = ["tests/unit/analysis/simple_analyzer_test.cpp"],
    deps = [
        ":analysis",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "stop_filter_test",
    srcs = ["tests/unit/analysis/stop_filter_test.cpp"],
    deps = [
        ":analysis",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "p1_demo",
    srcs = ["examples/p1_demo.cpp"],
    deps = [":util"],
)
