load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "util",
    srcs = ["src/util/bit_vector.cpp"],
    hdrs = [
        "include/minilucene/util/bit_vector.h",
        "include/minilucene/util/priority_queue.h",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_test(
    name = "bit_vector_test",
    srcs = ["tests/unit/util/bit_vector_test.cpp"],
    deps = [
        ":util",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "priority_queue_test",
    srcs = ["tests/unit/util/priority_queue_test.cpp"],
    deps = [
        ":util",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "store",
    srcs = [
        "src/store/index_output.cpp",
        "src/store/index_input.cpp",
        "src/store/ram_directory.cpp",
        "src/store/fs_directory.cpp",
    ],
    hdrs = [
        "include/minilucene/store/directory.h",
        "include/minilucene/store/index_input.h",
        "include/minilucene/store/index_output.h",
        "include/minilucene/store/ram_directory.h",
        "include/minilucene/store/fs_directory.h",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_test(
    name = "vint_test",
    srcs = ["tests/unit/store/vint_test.cpp"],
    deps = [
        ":store",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "ram_directory_test",
    srcs = ["tests/unit/store/ram_directory_test.cpp"],
    deps = [
        ":store",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "fs_directory_test",
    srcs = ["tests/unit/store/fs_directory_test.cpp"],
    deps = [
        ":store",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "document",
    srcs = [
        "src/document/field.cpp",
        "src/document/document.cpp",
        "src/document/date_field.cpp",
    ],
    hdrs = [
        "include/minilucene/document/date_field.h",
        "include/minilucene/document/document.h",
        "include/minilucene/document/field.h",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "analysis",
    srcs = [
        "src/analysis/token.cpp",
        "src/analysis/letter_tokenizer.cpp",
        "src/analysis/lower_case_tokenizer.cpp",
        "src/analysis/lower_case_filter.cpp",
        "src/analysis/stop_filter.cpp",
        "src/analysis/porter_stemmer.cpp",
        "src/analysis/porter_stem_filter.cpp",
        "src/analysis/simple_analyzer.cpp",
        "src/analysis/stop_analyzer.cpp",
    ],
    hdrs = [
        "include/minilucene/analysis/token.h",
        "include/minilucene/analysis/token_stream.h",
        "include/minilucene/analysis/tokenizer.h",
        "include/minilucene/analysis/token_filter.h",
        "include/minilucene/analysis/letter_tokenizer.h",
        "include/minilucene/analysis/lower_case_filter.h",
        "include/minilucene/analysis/lower_case_tokenizer.h",
        "include/minilucene/analysis/porter_stem_filter.h",
        "include/minilucene/analysis/porter_stemmer.h",
        "include/minilucene/analysis/stop_filter.h",
        "include/minilucene/analysis/analyzer.h",
        "include/minilucene/analysis/simple_analyzer.h",
        "include/minilucene/analysis/stop_analyzer.h",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_test(
    name = "document_test",
    srcs = ["tests/unit/document/document_test.cpp"],
    deps = [
        ":document",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "porter_stemmer_test",
    srcs = ["tests/unit/analysis/porter_stemmer_test.cpp"],
    deps = [
        ":analysis",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "simple_analyzer_test",
    srcs = ["tests/unit/analysis/simple_analyzer_test.cpp"],
    deps = [
        ":analysis",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "stop_filter_test",
    srcs = ["tests/unit/analysis/stop_filter_test.cpp"],
    deps = [
        ":analysis",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "index",
    srcs = [
        "src/index/field_info.cpp",
        "src/index/field_infos.cpp",
        "src/index/fields_writer.cpp",
        "src/index/fields_reader.cpp",
        "src/index/term_infos_writer.cpp",
        "src/index/term_infos_reader.cpp",
        "src/index/document_writer.cpp",
        "src/index/index_writer.cpp",
        "src/index/segment_infos.cpp",
        "src/index/segment_reader.cpp",
        "src/index/segment_merger.cpp",
    ],
    hdrs = [
        "include/minilucene/index/document_writer.h",
        "include/minilucene/index/field_info.h",
        "include/minilucene/index/field_infos.h",
        "include/minilucene/index/fields_reader.h",
        "include/minilucene/index/fields_writer.h",
        "include/minilucene/index/index_reader.h",
        "include/minilucene/index/index_writer.h",
        "include/minilucene/index/segment_infos.h",
        "include/minilucene/index/segment_merger.h",
        "include/minilucene/index/segment_reader.h",
        "include/minilucene/index/term.h",
        "include/minilucene/index/term_docs.h",
        "include/minilucene/index/term_enum.h",
        "include/minilucene/index/term_info.h",
        "include/minilucene/index/term_infos_reader.h",
        "include/minilucene/index/term_infos_writer.h",
        "include/minilucene/index/term_positions.h",
    ],
    strip_include_prefix = "include",
    deps = [
        ":analysis",
        ":document",
        ":store",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "document_writer_test",
    srcs = ["tests/unit/index/document_writer_test.cpp"],
    deps = [
        ":index",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "write_read_roundtrip_test",
    srcs = ["tests/integration/write_read_roundtrip_test.cpp"],
    deps = [
        ":index",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "search",
    srcs = [
        "src/search/term_query.cpp",
        "src/search/index_searcher.cpp",
        "src/search/boolean_query.cpp",
        "src/search/phrase_query.cpp",
        "src/search/prefix_query.cpp",
        "src/search/wildcard_query.cpp",
        "src/search/fuzzy_query.cpp",
        "src/search/hits.cpp",
        "src/query_parser/query_parser.cpp",
    ],
    hdrs = [
        "include/minilucene/search/boolean_clause.h",
        "include/minilucene/search/boolean_query.h",
        "include/minilucene/search/fuzzy_query.h",
        "include/minilucene/search/hits.h",
        "include/minilucene/search/index_searcher.h",
        "include/minilucene/search/searcher.h",
        "include/minilucene/search/phrase_query.h",
        "include/minilucene/search/prefix_query.h",
        "include/minilucene/search/query.h",
        "include/minilucene/search/scorer.h",
        "include/minilucene/search/similarity.h",
        "include/minilucene/search/term_query.h",
        "include/minilucene/search/top_docs.h",
        "include/minilucene/search/wildcard_query.h",
        "include/minilucene/query_parser/query_parser.h",
    ],
    strip_include_prefix = "include",
    deps = [
        ":index",
        ":util",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "search_termquery_test",
    srcs = ["tests/integration/search_termquery_test.cpp"],
    deps = [
        ":search",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "segment_merge_test",
    srcs = ["tests/integration/segment_merge_test.cpp"],
    deps = [
        ":index",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "phrase_query_test",
    srcs = ["tests/unit/search/phrase_query_test.cpp"],
    deps = [
        ":search",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "advanced_query_test",
    srcs = ["tests/unit/search/advanced_query_test.cpp"],
    deps = [
        ":search",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "query_parser_test",
    srcs = ["tests/unit/query_parser/query_parser_test.cpp"],
    deps = [
        ":search",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "boolean_query_test",
    srcs = ["tests/unit/search/boolean_query_test.cpp"],
    deps = [
        ":search",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "index_files",
    srcs = ["examples/index_files.cpp"],
    deps = [":index", ":analysis", ":store", ":document"],
)

cc_binary(
    name = "search_files",
    srcs = ["examples/search_files.cpp"],
    deps = [":index", ":search", ":store", ":document"],
)

